# log4boost

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile.in
include/log4boost/: allocator.hpp  appender_creator_base.hpp  appender_factory.hpp  config.hpp  config_watch_dog.hpp  configurator.hpp  date_time.hpp  file_watch_dog.hpp  layout_factory.hpp  log4boost.hpp  logger.hpp  logging_event.hpp  ndc.hpp  priority.hpp  rolling_file_settings.hpp  scoped_tracer.hpp
include/log4boost/appender/: appender.hpp  console_appender.hpp  file_appender.hpp  ipc_appender.hpp  layout_appender.hpp  log_agent_appender.hpp  ostream_appender.hpp  rolling_file_appender.hpp  tcp_appender.hpp  udp_appender.hpp  win32_debug_appender.hpp
include/log4boost/detail/: hierarchy_maintainer.hpp  mutex.hpp  noncopyable.hpp  process_id.hpp  shared_ptr.hpp  singleton.hpp  stack_ostream.hpp  thread_id.hpp  time_format_holder.hpp
include/log4boost/layout/: binary_layout.hpp  formatter_layout.hpp  layout.hpp  log4j_xml_layout.hpp  simple_xml_layout.hpp
include/log4boost/receiver/: ipc_receiver.hpp  receiver.hpp  tcp_receiver.hpp  udp_receiver.hpp
include/log4boost/writer/: file_writer.hpp  rolling_file_writer.hpp  tcp_writer.hpp  writer.hpp
src/: .log_agent_appender.cpp.swo  CMakeLists.txt  allocator.cpp  appender.cpp  appender_factory.cpp  binary_layout.cpp  config_watch_dog.cpp  configurator.cpp  console_appender.cpp  date_time.cpp  escape_string.cpp  escape_string.hpp  file_appender.cpp  file_watch_dog.cpp  file_writer.cpp  formatter_layout.cpp  hierarchy_maintainer.cpp  io.hpp  ipc_appender.cpp  ipc_receiver.cpp  layout.cpp  layout_appender.cpp  layout_factory.cpp  log4boost.cpp  log4j_xml_layout.cpp  log_agent.cpp  log_agent.hpp  log_agent_appender.cpp  log_agent_main.cpp  log_server_main.cpp  logger.cpp  logging_event.cpp  mutex.cpp  ndc.cpp  ostream_appender.cpp  priority.cpp  ptree.cpp  ptree.h  ptree_inc.h  receiver.cpp  (+16 more)
test/: CMakeLists.txt  logging_conf.properties  logging_conf_for_log_agent_appender.properties  logging_conf_with_preconfig.properties  stdafx.cpp  stdafx.h  test_configurator.cpp  test_configure.cpp  test_configure_and_watch_0.cpp  test_configure_and_watch_1.cpp  test_console_appender.cpp  test_file_appender.cpp  test_ipc_appender.cpp  test_ipc_receiver.cpp  test_log_agent_appender.cpp  test_preconfigure.cpp  test_tcp_appender.cpp  test_udp_appender.cpp  test_udp_receiver.cpp  test_win32_debug_appender.cpp  unit_test.cpp
tools/cmake/modules/: MSVCPCH.cmake
